--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style1.css">
+    <link rel="stylesheet" href="./CSS/style1.css">
     
     <title>Inicio-DoncaPasteleria</title>
 </head>
@@ -25,11 +25,11 @@
         <nav> 
             <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="./pages/tortas.html">Tortas</a></li>
-                <li><a href="./pages/cookies.html">Cookies</a></li>
-                <li><a href="./pages/cupcakes.html">Cupcakes</a></li>
-                <li><a href="./pages/sobremi.html">Sobre Mi</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
+                <li><a href="./Pages/tortas.html">Tortas</a></li>
+                <li><a href="./Pages/cookies.html">Cookies</a></li>
+                <li><a href="./Pages/cupcakes.html">Cupcakes</a></li>
+                <li><a href="./Pages/sobremi.html">Sobre Mi</a></li>
+                <li><a href="./Pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
         <div class="menu-hamburguesa">
